a new paragraph added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>ruchi-project </h1>
+    <p>all the edits are done in project check this very carefully</p>
 </body>
 </html>
