--- a/about.html
+++ b/about.html
@@ -1,1 +1,12 @@
-about us 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>About us </h2>
+    <p>this </p>
+</body>
+</html>
